New favicon and some minor changes

--- a/administrator/language/pl-PL/pl-PL.com_joomleague.ini
+++ b/administrator/language/pl-PL/pl-PL.com_joomleague.ini
@@ -17,6 +17,8 @@ FRIENDLY_MATCHES=Towarzyski
 #Standard sports types
 #----------------------------------------------------------
 SOCCER=Piłka Nożna
+MEN'S BASKETBALL=Koszykówka męska
+WOMEN'S BASKETBALL=Koszykówka kobieca
 JL_S_SOCCER=Piłka Nożna
 JL_S_FOOTBALL=Futbol
 JL_S_AMERICAN_FOOTBALL=Futbol Amerykański
